# TypeWhich

./: .gitignore  Cargo.toml  README.md  benchmarks.yaml  build.rs  expected.yaml  grift_inference.sh  latex.sh  performance.sh  run_grift.sh  run_tool.sh  tables.sh  test-runner.sh  test.expected.yaml  test.results.yaml
.github/workflows/: build.yml
adversarial/: 01-farg-mismatch.gtlc  02-rank2-poly-id.gtlc  03-unreachable-error.gtlc  04-f-in-f-out.gtlc  05-order3-fun.gtlc  06-order3-intfun.gtlc  07-double-f.gtlc  08-outflows.gtlc  09-precision-relation.gtlc  10-if-tag.grift  10-if-tag.gtlc  arrow_in_any.gtlc  context_restriction.gtlc  dynamic_consistency_fails.gtlc  reachable_crash.gtlc  running_example.gtlc  unreachable_error.gtlc
doc/: .gitignore  Makefile  doc.bib  doc.tex  readme.html  readme.md
eg/: id_poly  uid
grift-examples/: luna1-typed.grift  luna1.grift  trying-out-ann.grift
grift-suite/: README.md  run.sh
grift-suite/core/: letrec11.grift  letrec12.grift  letrec14.grift
grift-suite/program/: fact-church-5.grift  insertion-sort-5.grift  merge-sort-5.grift  sieve.grift
grift-suite/static/: letrec11.grift  letrec12.grift  letrec13.grift  (+1 more)
ins-and-outs/: Cargo.toml  README.md  build.rs
ins-and-outs/src/: collect_coercions.rs  decorate.rs  flow.rs  hmm  lexer.l  main.rs  parser.rs  parser.y  pretty.rs  solve.rs  syntax.rs  type_check.rs
migeed/: 01_apply_add.gtlc  02_add_applied.gtlc  03_add_two_applies.gtlc  04_identity_four.gtlc  05_succ_id_id.gtlc  06_identity.gtlc  07_apply2.gtlc  08_indirect_apply_self.gtlc  09_the_long_one.gtlc  10_apply_self.gtlc  11_untypable_in_sys_f.gtlc  12_self_interpreter.gtlc  Migrate.hs  Parser.hs
other-examples/: if-tag-ctx.gtlc  io-bool-outflow.gtlc  luna1-typed.grift  outflows-if.gtlc
src/: benchmark.rs  cgen.rs  eval.rs  grift.l  grift.rs  grift.y  insert_coercions.rs  lexer.l  main.rs  parser.rs  parser.y  precision.rs  pretty.rs  syntax.rs  type_check.rs  z3_state.rs
(+19 files in other folders)
