[package]
name = "typeinf-playground"
version = "0.1.0"
authors = ["Arjun Guha <a.guha@northeastern.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfgrammar = "*"
lrlex = "*"
lrpar = "*"

[build-dependencies]
cfgrammar = "*"
lrlex = "*"
lrpar = "*"
z3 = { version = "*" }