[package]
name = "typeinf-playground"
version = "0.1.0"
authors = ["Arjun Guha <a.guha@northeastern.edu>", "Luna Phipps-Costin <lphippscosti@umass.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cfgrammar = "*"
lrlex = "*"
lrpar = "*"

[dependencies]
cfgrammar = "*"
lrlex = "*"
lrpar = "*"
im-rc = "*"
z3 = { git = "https://github.com/prove-rs/z3.rs" }
