[package]
name = "typeinf-playground"
version = "0.1.0"
authors = ["Arjun Guha <a.guha@northeastern.edu>", "Luna Phipps-Costin <lphippscosti@umass.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cfgrammar = "*"
lrlex = "*"
lrpar = "*"

[dependencies]
cfgrammar = "*"
lrlex = "*"
lrpar = "*"
im-rc = "*"
pretty = "*"
z3 = "0.10.0"
lexpr = "0.2.6"
clap = "3.0.0-beta.2"
serde = { version = "1.*", features = ["derive"] }
serde_yaml = "*"
derive_more = "*"
wait-timeout = "*"
